--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-See continuous integration at:
-http://for.thoughtworkers.org
+Stomp ( http://stomp.codehaus.org/ ) is a simple text oriented messaging protocol. 
+
+The purpose of stompc project is to build a Stomp broker (as well as client) with C programming language, using decent agile practices such as Test Driven Development and Refactoring. As a sample and template, stompc enables agile evangelists with the ability to handle telecom system written with C/C++. 
